# SwappyRosServoControl

./: CMakeLists.txt  README.md  package.xml
msg/: ServoControlState.msg  ServoState.msg
src/: Arguments.hpp  Wrapper.cpp  Wrapper.hpp  client.cpp  node.cpp
src/configuration/: ClientConfiguration.hpp  NodeConfiguration.hpp  SpiConfiguration.hpp
src/protocol/: Commands.hpp  Device.hpp  Handler.cpp  Handler.hpp  ReturnState.hpp
